src/objects/ISA_Payment__c.object
<CustomObject>
    <fields>
        <fullName>Date_30_BD_Notice_Received__c</fullName>
        <label>Date 30 BD Notice Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Extension_Payment_Due__c</fullName>
        <label>Date Extension Payment Due</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Invoice_Due__c</fullName>
        <label>Date Invoice Due</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Invoice_Paid__c</fullName>
        <label>Date Invoice Paid</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Invoice_Sent__c</fullName>
        <label>Date Invoice Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IX_Service_Agreement__c</fullName>
        <label>IX Service Agreement</label>
        <referenceTo>IX_Service_Agreement__c</referenceTo>
        <relationshipLabel>ISA Payments</relationshipLabel>
        <relationshipName>ISA_Payments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Invoice_Amount__c</fullName>
        <label>Invoice Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Plan_Payment_Number__c</fullName>
        <label>Payment Plan Payment Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>25percent</fullName>
                    <label>25%</label>
                </value>
                <value>
                    <fullName>75%</fullName>
                </value>
                <value>
                    <fullName>Payment Plan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>ISA Payment</label>
    <nameField>
        <label>ISA Payment</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ISA Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>